the main swagger docs was completed: refactoring and testing stage have been begun
